Added catalog and brands parts
Include style

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ header {
     position: fixed;
     width: 100%;
     background-color: #ffffff;
+    z-index: 2;
 }
 
 #navbar {
@@ -17,6 +18,18 @@ header {
 
 #userArea {
     float: left;
+    text-align: center;
+}
+
+#userArea .number {
+    display: inline-block;
+    color: #ffffff;
+    background-color: #000000;
+    border-radius: 50px;
+    vertical-align: middle;
+    font-size: 12px;
+    height: 20px;
+    width: 20px;
 }
 
 .backgroundImg {
@@ -31,8 +44,63 @@ header {
     background-image: url(assets/cover1.png);
 }
 
+#catalogDiv {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+#catalogDiv h2 {
+    font-weight: bold;
+}
+
+.row {
+    text-align: center;
+}
+
+.row div {
+    display: inline-block;
+}
+
+#catalogDiv button {
+    display: block;
+    margin-left: 0%;
+    margin-right: auto;
+    margin-top: 2%;
+    margin-bottom: 1%;
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 22px;
+}
+
 #suitcaseBack {
     background-image: url(assets/parallax1.jpg);
+}
+
+#brandsDiv h2 {
+    font-weight: bold;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+
+#brandOne {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+#brandOne img{
+    display: inline-block;
+}
+
+#brandOne p {
+    text-align: right;
+    display: inline-block;
+    font-size: 12px;
+}
+
+#icons {
+    color: #000000;
+    font-size: 50px;
 }
 
 #cargoPlane {
